buildscript {
    ext {
        springBootVersion = '4.0.3'
        springAiVersion = '2.0.0-M3'
    }

    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

plugins {
    id 'java'
    id 'idea'
    id 'java-library'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ttn.ck'
version = '0.0.1-SNAPSHOT'
description = 'Apn opportunity project'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    api project(":snowplug")
    api project(":errorhandler")
    api project(":queryprocessor")
}

bootJar {
    enabled = true
}

allprojects {

    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    dependencyManagement {
        imports {
            mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-webmvc'
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'org.springframework.boot:spring-boot-starter-jdbc'
        implementation 'org.springframework.boot:spring-boot-starter-amqp'
        implementation 'org.springframework.ai:spring-ai-starter-model-openai'
        implementation 'org.springframework.retry:spring-retry:2.0.5'

        // Snowflake JDBC driver
        implementation 'net.snowflake:snowflake-jdbc:3.16.1'

        // Apache POI for Excel generation
        implementation 'org.apache.poi:poi-ooxml:5.2.5'

        // Jackson for JSON serialization in RabbitMQ messages
        implementation 'com.fasterxml.jackson.core:jackson-databind'

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
        }
    }
}

jar {
    manifest {
        attributes('Class-Path': configurations.collect { it.getName() }.join(' '), 'Main-Class': 'com.ttn.ck.apn.ApnOpportunityApplication')
    }
}